# oodle-sys

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  build.rs  oodle2.h  oodle2base.h
src/: bindings.rs  lib.rs
test_data/: compressed  decompressed
